[package]
name = "binary-extract"
version = "0.1.0"
edition = "2021"
description = "Extract a value from a json string without parsing the whole thing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "json"
harness = false
